Metalama.Framework/tests/Metalama.Framework.Tests.AspectTests/Tests/Aspects/InvalidCode/DuplicateDeclaration.cs
// Copyright (c) 2020-2025 SharpCrafters s.r.o. and contributors.
// SharpCrafters s.r.o. licenses this file to you under either an MIT license
// or a proprietary license, depending on the repository from which it was obtained.
// Refer to LICENSE.md in the repository root for complete details.

using System;
using Metalama.Framework.Advising;
using Metalama.Framework.Aspects;

namespace Metalama.Framework.Tests.PublicPipeline.Aspects.InvalidCode.DuplicateDeclaration;

/*
 * Tests that ambiguous declaration does not cause a crash in the linker. The output may not be correct.
 */

internal class Aspect : OverrideMethodAspect
{
    public override dynamic? OverrideMethod()
    {
        Console.WriteLine( "Aspect" );

        return meta.Proceed();
    }
}

// <target>
internal class TargetCode
{
    [Aspect]
    private int Method( int a )
    {
        return a;
    }

#if TESTRUNNER
    int Method(int a)
    {
        return a;
    }
#endif
}